# mct-rs

./: Cargo.toml  Readme.md  notes.md
examples/: tictactoe.rs
src/: action.rs  lib.rs  mcts.rs  mdp.rs  node.rs  policy.rs  rand.rs  strategy.rs  ucb1.rs
src/bandit/: mod.rs  selector.rs  ucb1.rs
